# fast-channels

./: CHANGELOG.md  README.rst  pyproject.toml
docs/: index.rst
docs/guides/: channel-layer-setup.rst
docs/reference/: consumers.rst
docs/tutorial/: preparation.rst
fast_channels/: type_defs.py
fast_channels/consumer/: __init__.py  http.py
fast_channels/layers/redis/: serializers.py
fast_channels/testing/: __init__.py  http.py
tests/: test_generic_http.py
tests/layers/redis/: test_serializers.py
