[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "commitizen>=4.4.1,<5",
  "fastapi>=0.116.1",
  "mypy>=1.18.1",
  "pyright>=1.1.405",
  "rq>=2.6.0",
  "types-cryptography>=3.3.23.2",
  "uvicorn[standard]>=0.35.0"
]
docs = [
  "Sphinx>=7.0.0,<8",
  "myst-parser>=4.0.1",
  "sphinx_rtd_theme"
]
lint = [
  "black>=25.9.0,<26",
  "interrogate>=1.7.0",
  "mypy>=1.15.0",
  "pre-commit>=3.4.0,<4.0.0",
  "pyright[nodejs]>=1.1.400,<2",
  "ruff==0.13.2",
  "toml-sort>=0.24.2,<0.25"
]
test = [
  "coverage[toml]>=7.8.0,<8",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.1.0,<7",
  "pytest-mock>=3.14.0,<4",
  "pytest-xdist>=3.6.1,<4",
  "pytest>=8.3.5,<9"
]

[project]
authors = [{email = "ndhgl99@gmail.com", name = "Huy Nguyen"}]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development"
]
dependencies = [
  "asgiref>=3,<4"
]
description = "Fast Channels brings Django Channels–style consumers and channel layers to FastAPI and Starlette for real-time apps."
license = {file = "LICENSE"}
name = "fast-channels"
readme = "README.rst"
requires-python = ">=3.11,<4.0"
version = "1.1.0"

[project.optional-dependencies]
redis = [
  "cryptography",
  "msgpack",
  "redis"
]

[project.urls]
Documentation = "https://fast-channels.readthedocs.io/"
Homepage = "https://github.com/huynguyengl99/fast-channels"
Repository = "https://github.com/huynguyengl99/fast-channels"

[tool.black]
line-length = 88
preview = true

[tool.commitizen]
gpg_sign = true
name = "cz_conventional_commits"
pre_bump_hooks = [
  "scripts/update_lock.sh"
]
tag_format = "v$version"
update_changelog_on_bump = true
use_shortcuts = true
version_provider = "pep621"
version_scheme = "pep440"

[tool.hatch.build.targets.sdist]
include = ["fast_channels"]

[tool.hatch.build.targets.wheel]
include = ["fast_channels"]

[tool.interrogate]
badge-format = "svg"
color = true
exclude = ["build", "docs", "sandbox", "setup.py", "tests"]
ext = []
fail-under = 80
generate-badge = "docs/_static/"
ignore-init-method = true
ignore-init-module = true
ignore-module = false
ignore-nested-classes = false
ignore-nested-functions = false
ignore-overloaded-functions = false
ignore-private = false
ignore-property-decorators = false
style = "sphinx"
verbose = 0
whitelist-regex = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
overrides."lint.isort.section-order".inline_arrays = false

[tool.uv]
default-groups = "all"
